classDiagram
    direction LR

    class ISubscriber {
        <<interface>>
        +update()*
    }

    class IChannel {
        <<interface>>
        +subscribe(ISubscriber*)*
        +unsubscribe(ISubscriber*)*
        +notifySubscribers()*
    }

    class Channel {
        -vector~ISubscriber*~ subscribers
        -string name
        -string latestVideo
        +Channel(const string& name)
        +subscribe(ISubscriber*) override
        +unsubscribe(ISubscriber*) override
        +notifySubscribers() override
        +uploadVideo(const string& title)
        +getVideoData() string
    }

    class Subscriber {
        -string name
        -Channel* channel
        +Subscriber(const string& name, Channel* channel)
        +update() override
    }

    IChannel <|.. Channel
    ISubscriber <|.. Subscriber
    Channel "1" o-- "*" ISubscriber : manages
    Subscriber --> Channel : reads video data

%% ------------------------------
%% Sequence flow from main()
%% ------------------------------
sequenceDiagram
    autonumber
    participant M as main()
    participant C as Channel
    participant S1 as Subscriber(Shubham)
    participant S2 as Subscriber(Hardik)

    M->>C: create Channel("Bhai_ki_padhai")
    M->>S1: create Subscriber("Shubham", C)
    M->>S2: create Subscriber("Hardik", C)

    M->>C: subscribe(S1)
    M->>C: subscribe(S2)

    M->>C: uploadVideo("Observer Pattern Tutorial")
    C->>C: notifySubscribers()
    C->>S1: update()
    S1->>C: getVideoData()
    C->>S2: update()
    S2->>C: getVideoData()

    M->>C: unsubscribe(S1)

    M->>C: uploadVideo("Decorator Pattern Tutorial")
    C->>C: notifySubscribers()
    C->>S2: update()
    S2->>C: getVideoData()
